--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "playstack",
   "version": "1.0.0",
   "description": "a backend project for a video streaming plateform guided by hitesh sir",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "uttam kumar pathak",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
