fix: update MongoDB URI in .env.sample to use placeholder values

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://uttamkumarpathak:db_password@cluster0.r2xtt1l.mongodb.net
+MONGODB_URI=mongodb+srv://your_db_name:db_password@cluster0.r2xtt1l.mongodb.net
