--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://your_db_name:db_password@cluster0.r2xtt1l.mongodb.net
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET= use-your-own-token //you can generate thorough any token genrator
+ACCESS_TOKEN_EXPIRY= 1d
+REFRESH_TOKEN_SECRET= use-your-own-token
+REFRESH_TOKEN_EXPIRY= 10d
