--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,7 @@ ACCESS_TOKEN_SECRET= use-your-own-token //you can generate thorough any token ge
 ACCESS_TOKEN_EXPIRY= 1d
 REFRESH_TOKEN_SECRET= use-your-own-token
 REFRESH_TOKEN_EXPIRY= 10d
+
+CLOUDINARY_CLOUD_NAME= use-your-own-cloud-name
+CLOUDINARY_API_KEY= use-your-own-cloudinary-api-key
+CLOUDINARY_API_SECRET= use-your-own-cloudinary-api-secret
